# CommandCenter

./: .claudeignore  .codecov.yml  .env.docker  .env.prod.template  .env.template  .gitignore  .pre-commit-config.yaml  AGENTFLOW_REVIEW.md  AGENTS.md  AGENT_EXECUTION_README.md  AGENT_PARALLEL_EXECUTION_PLAN.md  AGENT_REVIEW_PLAN.md  AGENT_SYSTEM_SUMMARY.md  API_MANAGER_REVIEW.md  BACKEND_REVIEW.md  BOOTSTRAP_PR_TEST.md  BOOTSTRAP_WORKS.md  CHANGELOG.md  CHECKLIST.md  CLAUDE.md  CODE_QUALITY_REVIEW.md  CONTRIBUTING.md  CommandCenter.code-workspace  DEVOPS_REVIEW.md  DOCS_REVIEW.md  DOCUMENTATION_STATUS.md  FINAL_REPORT.md  GITHUB_REVIEW.md  HUB_DESIGN.md  HUB_STATUS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  KNOWLEDGEBEAST_INTEGRATION_PLAN.md  KNOWLEDGEBEAST_INTEGRATION_SESSION1.md  KNOWLEDGEBEAST_REVIEW.md  MCP_ARCHITECTURE_SECURITY_REVIEW.md  MCP_INFRASTRUCTURE_REVIEW.md  Makefile  NEXT_SESSION.md  (+38 more)
backend/: .dockerignore  .env.example  .env.test  .flake8  .gitignore  DEPRECATED.md  Dockerfile  Dockerfile.postgres  Dockerfile.test  README.md  TEST_VERIFICATION.md  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  run_integration_tests.sh  setup.py  test_api.py
backend/.claude/sessions/: 2026-01-02-00-40-summary.md  2026-01-02-05-35-summary.md  2026-01-02-06-37-summary.md  2026-01-02-06-56-summary.md  2026-01-02-08-10-summary.md  2026-01-02-08-15-summary.md  2026-01-02-08-21-summary.md  2026-01-02-08-57-summary.md  2026-01-02-09-00-summary.md  2026-01-02-09-35-summary.md  2026-01-02-10-11-summary.md  2026-01-02-10-39-summary.md  2026-01-02-10-50-summary.md  2026-01-02-11-45-summary.md
backend/alembic/: env.py
backend/alembic/versions/: 001_add_security_features.py  003_add_project_isolation.py  004_knowledgebeast_integration.py  005_add_project_analysis.py  005_add_technology_radar_v2_fields.py  006_merge_heads.py  007_add_jobs_table.py  008_add_schedules_table.py  009_add_integrations_table.py  010_enhance_webhook_config.py  011_add_webhook_deliveries_table.py  012_enhance_schedules_timezone_audit.py  013_merge_heads.py  (+22 more)
backend/app/: beat_schedule.py  config.py  config_optimized.py  database.py  main.py  main.py.backup  nats_client.py
backend/cli/: __init__.py  api_client.py  cc_agent.py  commandcenter.py  config.py  output.py
backend/dagger_modules/: postgres.py
backend/docker/: Dockerfile.postgres  init-pgvector.sql
backend/docs/: PROJECT_ANALYZER.md  TEST_VERIFICATION.md
backend/scripts/: audit_agent_completeness.py  audit_agent_consistency.py  audit_agent_drift.py  build-postgres.py  concept_extraction_result.json  create_test_graph_data.py  graph_indexer.py  init_db.py  migrate_chromadb_to_collections.py  startup.sh  test_concept_extractor.py  test_phase7_e2e.py
backend/tests/: README.md  __init__.py  conftest.py  test_auth.py  test_chromadb_isolation.py  test_config.py  test_dependencies.py  test_full_integration.py  test_git_security.py  test_mcp_auth.py  test_path_security.py  test_skills.py  utils.py
hub/backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.test  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
(+2588 files in other folders)
