[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commandcenter-hub"
version = "0.1.0"
description = "CommandCenter Hub - Multi-project orchestration"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
hub = "app.cli.__main__:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
