[project]
name = "commandcenter-auto-coder"
version = "0.1.0"
description = "Composable autonomous coding skills for CommandCenter"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.5.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
auto-coder = "src.cli.commands:auto_coder"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
